@@ -21,6 +21,7 @@ Supported machines:
    * MacBook Pro Core2 Duo 17" (October 2006 & June 2007)
    * MacBook Core Duo (May 2006)
    * MacBook Core2 Duo (November 2006 & May 2007)
+   * MacBook Core2 Duo Santa Rosa (November 2007)
 
 
  - PowerMac machines
